[gd_scene load_steps=26 format=2]

[ext_resource path="res://charactors/demon/Attack3.png" type="Texture" id=1]
[ext_resource path="res://charactors/demon/Attack4.png" type="Texture" id=2]
[ext_resource path="res://charactors/demon/Walk6.png" type="Texture" id=3]
[ext_resource path="res://charactors/demon/Idle3.png" type="Texture" id=4]
[ext_resource path="res://charactors/demon/Idle1.png" type="Texture" id=5]
[ext_resource path="res://charactors/demon/Walk1.png" type="Texture" id=6]
[ext_resource path="res://charactors/demon/Walk3.png" type="Texture" id=7]
[ext_resource path="res://charactors/demon/Attack1.png" type="Texture" id=8]
[ext_resource path="res://charactors/demon/Attack2.png" type="Texture" id=9]
[ext_resource path="res://charactors/demon/Idle2.png" type="Texture" id=10]
[ext_resource path="res://charactors/demon/Walk2.png" type="Texture" id=11]
[ext_resource path="res://charactors/demon/Hurt1.png" type="Texture" id=12]
[ext_resource path="res://charactors/demon/Walk5.png" type="Texture" id=13]
[ext_resource path="res://charactors/demon/Death3.png" type="Texture" id=14]
[ext_resource path="res://charactors/demon/Death4.png" type="Texture" id=15]
[ext_resource path="res://charactors/demon/Death2.png" type="Texture" id=16]
[ext_resource path="res://charactors/demon/Death5.png" type="Texture" id=17]
[ext_resource path="res://textures/ui/uipack_fixed/PNG/green_button13.png" type="Texture" id=18]
[ext_resource path="res://charactors/demon/Walk4.png" type="Texture" id=19]
[ext_resource path="res://textures/ui/uipack_fixed/PNG/green_button05.png" type="Texture" id=20]
[ext_resource path="res://charactors/demon/Death1.png" type="Texture" id=21]
[ext_resource path="res://charactors/demon/Death6.png" type="Texture" id=22]
[ext_resource path="res://charactors/demon/Hurt2.png" type="Texture" id=23]
[ext_resource path="res://scenes/reusable-scripts/enemy/Enemy.gd" type="Script" id=24]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 22 ) ],
"loop": false,
"name": "Death",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 10 ), ExtResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 19 ), ExtResource( 13 ), ExtResource( 3 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 23 ) ],
"loop": false,
"name": "Hurt",
"speed": 5.0
} ]

[node name="Enemy" type="Node2D" groups=[
"enemy",
]]
position = Vector2( 104.271, 361.586 )
script = ExtResource( 24 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
modulate = Color( 1, 1, 1, 0.984314 )
position = Vector2( 32.443, -14.8041 )
frames = SubResource( 1 )
animation = "Idle"
frame = 2
playing = true

[node name="RayCast2D" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( 5, -0.5 )
enabled = true
cast_to = Vector2( 300, 0 )

[node name="BodyCollision" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0.42509, -17.5947 )

[node name="HealthBar" type="TextureProgress" parent="KinematicBody2D/BodyCollision"]
margin_left = -29.4646
margin_top = -44.3372
margin_right = 160.535
margin_bottom = 4.66282
rect_scale = Vector2( 0.3, 0.2 )
value = 100.0
texture_under = ExtResource( 18 )
texture_progress = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackArea" type="Area2D" parent="KinematicBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/AttackArea"]
position = Vector2( 0, -22.376 )
__meta__ = {
"_edit_lock_": true
}

[node name="FloorCheck" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( 150, 0 )
enabled = true
cast_to = Vector2( 0, 300 )

[node name="DeathTimer" type="Timer" parent="KinematicBody2D"]
wait_time = 2.0

[node name="DeathTween" type="Tween" parent="KinematicBody2D"]

[node name="StopAlertTimer" type="Timer" parent="KinematicBody2D"]
wait_time = 5.0
[connection signal="animation_finished" from="KinematicBody2D/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="KinematicBody2D/AttackArea" to="." method="_on_AttackArea_area_entered"]
[connection signal="area_exited" from="KinematicBody2D/AttackArea" to="." method="_on_AttackArea_area_exited"]
[connection signal="timeout" from="KinematicBody2D/DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="KinematicBody2D/StopAlertTimer" to="." method="_on_StopAlertTimer_timeout"]
